--- a/index.html
+++ b/index.html
@@ -1,142 +1,147 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CoLab — Teamwork & Leadership Showcase</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nexus - Elevate Your Teamwork</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <a class="skip-link" href="#main">Skip to content</a>
-  <header class="site-header" role="banner">
-    <div class="container navbar" aria-label="Primary">
-      <a class="brand" href="index.html">
-        <span aria-hidden="true" class="brand-badge"></span>
-        <span>CoLab</span>
-      </a>
-      <nav class="nav" role="navigation" aria-label="Global">
-        <a href="index.html" aria-current="page">Home</a>
-        <a href="dashboard.html">Dashboard</a>
-        <a href="teams.html">Teams</a>
-        <a href="projects.html">Projects</a>
-        <a href="community.html">Community</a>
-        <a href="profile.html">Profile</a>
-      </nav>
-      <div class="header-actions">
-        <a href="profile.html" class="btn secondary">Sign In</a>
-        <a href="profile.html" class="btn">Create Account</a>
-      </div>
-    </div>
-  </header>
 
-  <main id="main">
-    <section class="container hero">
-      <div>
-        <h1 class="text-balance">Showcase your teamwork and leadership — beautifully.</h1>
-        <p class="lead">Create or join teams and projects, assign tasks, collect teamwork and leadership points, earn badges, and publish your work to the community for feedback and ratings — all without distractions.</p>
-        <div class="hero-cta">
-          <a class="btn" href="dashboard.html">Open Dashboard</a>
-          <a class="btn secondary" href="community.html">Explore Community</a>
+    <!-- Navbar -->
+    <header class="navbar">
+        <nav class="container">
+            <a href="#" class="navbar-brand">Nexus</a>
+            <div class="navbar-links">
+                <a href="#" class="navbar-link">Features</a>
+                <a href="#" class="navbar-link">Community</a>
+                <a href="#" class="navbar-link">Pricing</a>
+                <a href="#" class="navbar-link">Contact</a>
+            </div>
+            <div class="navbar-actions">
+                <a href="#" class="navbar-link">Sign In</a>
+                <a href="#" class="navbar-cta">Get Started</a>
+            </div>
+        </nav>
+    </header>
+
+    <!-- Hero Section -->
+    <section class="hero-section">
+        <div class="container text-center">
+            <h1 class="hero-title">
+                Unlock Your Team's True Potential.
+            </h1>
+            <p class="hero-subtitle">
+                A collaborative platform designed to showcase and reward teamwork and leadership excellence.
+            </p>
+            <a href="#" class="hero-cta">
+                Join Now for Free
+            </a>
         </div>
-        <div class="chips" style="margin-top:16px">
-          <span class="chip">Teams</span>
-          <span class="chip">Projects</span>
-          <span class="chip">Tasks</span>
-          <span class="chip">Badges</span>
-          <span class="chip">Ratings</span>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-head">
-          <h3 style="margin:0">Live Preview</h3>
-          <span class="status"><span aria-hidden="true">●</span> Clean UI</span>
-        </div>
-        <img src="/placeholder.svg?height=420&width=960" alt="Preview of a clean project management dashboard UI">
-      </div>
     </section>
 
-    <section class="container section">
-      <div class="section-head">
-        <h2>Everything you need to shine</h2>
-        <p>Designed to spotlight collaboration, clarity, and craft.</p>
-      </div>
-      <div class="grid grid-3">
-        <div class="card">
-          <h3>Teams & Roles</h3>
-          <p>Create or join teams. Leaders guide, members build — both get recognized.</p>
-          <div class="meta">
-            <span class="badge soft">Leader</span>
-            <span class="badge soft">Member</span>
-          </div>
+    <!-- Features Section -->
+    <section class="features-section">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">Features Built for Success</h2>
+                <p class="section-subtitle">
+                    From task management to gamified achievements, Nexus has everything you need to lead and collaborate effectively.
+                </p>
+            </div>
+            <div class="features-grid">
+
+                <!-- Feature Card 1: Collaborative Projects -->
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <span>&#x1F4C6;</span>
+                    </div>
+                    <h3 class="feature-title">Collaborative Projects</h3>
+                    <p class="feature-text">
+                        Create, manage, and complete projects together. Define roles and track progress in one intuitive dashboard.
+                    </p>
+                </div>
+
+                <!-- Feature Card 2: Teamwork & Leadership Points -->
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <span>&#x1F3C5;</span>
+                    </div>
+                    <h3 class="feature-title">Gamified Achievements</h3>
+                    <p class="feature-text">
+                        Earn points and badges for every task completed, rewarding both teamwork and leadership skills.
+                    </p>
+                </div>
+
+                <!-- Feature Card 3: Community & Feedback -->
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <span>&#x1F4DD;</span>
+                    </div>
+                    <h3 class="feature-title">Community Showcase</h3>
+                    <p class="feature-text">
+                        Share your projects with the community, get valuable feedback, and see what others are building.
+                    </p>
+                </div>
+
+                <!-- Feature Card 4: Team Match Requests -->
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <span>&#x1F91D;</span>
+                    </div>
+                    <h3 class="feature-title">Seamless Collaboration</h3>
+                    <p class="feature-text">
+                        Find and connect with new teammates by sending and accepting team match requests.
+                    </p>
+                </div>
+
+                <!-- Feature Card 5: Customizable Profiles -->
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <span>&#x1F464;</span>
+                    </div>
+                    <h3 class="feature-title">Detailed Profiles</h3>
+                    <p class="feature-text">
+                        Showcase your points, badges, and completed projects on a professional and customizable profile.
+                    </p>
+                </div>
+
+                <!-- Feature Card 6: Intuitive Dashboard -->
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <span>&#x1F4CA;</span>
+                    </div>
+                    <h3 class="feature-title">Insightful Analytics</h3>
+                    <p class="feature-text">
+                        Leaders can track team performance and project milestones with easy-to-read dashboards.
+                    </p>
+                </div>
+            </div>
         </div>
-        <div class="card">
-          <h3>Task Assignment</h3>
-          <p>Leaders assign tasks. Members complete them to earn <strong>Teamwork Points</strong>.</p>
-          <div class="progress" aria-label="Example completion">
-            <span style="width:70%"></span>
-          </div>
-        </div>
-        <div class="card">
-          <h3>Points & Badges</h3>
-          <p>Leadership and teamwork points power badges that reflect your strengths.</p>
-          <div class="chips">
-            <span class="badge blue">Leadership</span>
-            <span class="badge">Teamwork</span>
-            <span class="badge">Milestones</span>
-          </div>
-        </div>
-        <div class="card">
-          <h3>Community</h3>
-          <p>Upload projects, collect feedback, and earn ratings from peers.</p>
-          <div class="stars" aria-label="Average rating 4 out of 5">
-            <span class="star filled">★</span><span class="star filled">★</span><span class="star filled">★</span><span class="star filled">★</span><span class="star">★</span>
-          </div>
-        </div>
-        <div class="card">
-          <h3>Matchmaking</h3>
-          <p>Send team match requests to collaborate with the right people.</p>
-          <div class="pills">
-            <span class="badge">Design</span>
-            <span class="badge">Frontend</span>
-            <span class="badge">Backend</span>
-          </div>
-        </div>
-        <div class="card">
-          <h3>Profiles</h3>
-          <p>Your work, your points, your badges — all in a polished profile.</p>
-          <div class="meta">
-            <span class="avatar" aria-hidden="true">AB</span>
-            <span>Alex Brown</span>
-          </div>
-        </div>
-      </div>
     </section>
 
-    <section class="container section-tight">
-      <div class="item">
-        <div class="meta">
-          <span class="badge blue">Start</span>
-          <span>Ready to showcase your best work?</span>
+    <!-- Call to Action Section -->
+    <section class="cta-section">
+        <div class="container text-center">
+            <h2 class="cta-title">Ready to Elevate Your Team?</h2>
+            <p class="cta-subtitle">
+                Join thousands of teams already collaborating and achieving greatness.
+            </p>
+            <a href="#" class="cta-button">
+                Sign Up for Nexus
+            </a>
         </div>
-        <div>
-          <a href="dashboard.html" class="btn">Go to Dashboard</a>
-        </div>
-      </div>
     </section>
-  </main>
 
-  <footer class="site-footer">
-    <div class="container footer-inner">
-      <div class="footer-links" role="navigation" aria-label="Footer">
-        <a href="index.html">Home</a>
-        <a href="dashboard.html">Dashboard</a>
-        <a href="teams.html">Teams</a>
-        <a href="projects.html">Projects</a>
-        <a href="community.html">Community</a>
-        <a href="profile.html">Profile</a>
-      </div>
-      <p>CoLab — Built to celebrate teamwork and leadership.</p>
-    </div>
-  </footer>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container text-center">
+            <p>&copy; 2024 Nexus. All rights reserved.</p>
+        </div>
+    </footer>
+
 </body>
 </html>
