Added the community page

--- a/community.html
+++ b/community.html
@@ -109,6 +109,7 @@
                     </div>
                     <span class="date">1/5/2024</span>
                 </div>
+                <a href="#" class="btn-contribute">Contribute in this project</a>
             </div>
 
             <!-- Project Card 2 (Example) -->
@@ -150,6 +151,7 @@
                     </div>
                     <span class="date">1/10/2024</span>
                 </div>
+                <a href="#" class="btn-contribute">Contribute in this project</a>
             </div>
 
             <!-- Project Card 3 (Example) -->
@@ -191,6 +193,7 @@
                     </div>
                     <span class="date">1/8/2024</span>
                 </div>
+                <a href="#" class="btn-contribute">Contribute in this project</a>
             </div>
         </div>
     </div>
