fixed the navbar and links in landing page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,21 +10,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
     <!-- Navbar -->
-    <header class="navbar">
-        <nav class="container">
-            <a href="#" class="navbar-brand">Nexus</a>
-            <div class="navbar-links">
-                <a href="#" class="navbar-link">Features</a>
-                <a href="#" class="navbar-link">Community</a>
-                <a href="#" class="navbar-link">Pricing</a>
-                <a href="#" class="navbar-link">Contact</a>
-            </div>
-            <div class="navbar-actions">
-                <a href="#" class="navbar-link">Sign In</a>
-                <a href="#" class="navbar-cta">Get Started</a>
+    <header>
+        <nav class="navbar">
+            <div class="nav-container">
+                <a href="#" class="logo">Nexus</a>
+                <div class="nav-links">
+                    <a href="#">Home</a>
+                    <a href="#">Projects</a>
+                    <a href="#">Community</a>
+                    <div class="nav-btns">
+                        <a href="#" class="btn-secondary">Sign In</a>
+                        <a href="#" class="btn-primary">Get Started</a>
+                    </div>
+
+                </div>
             </div>
         </nav>
     </header>
@@ -37,7 +41,7 @@
             <p class="hero-subtitle">
                 A collaborative platform designed to showcase and reward teamwork and leadership excellence.
             </p>
-            <a href="#" class="hero-cta">
+            <a href="#" class="hero-cta" style="text-decoration-line: none;">
                 Join Now for Free
             </a>
         </div>
@@ -49,7 +53,8 @@
             <div class="section-header">
                 <h2 class="section-title">Features Built for Success</h2>
                 <p class="section-subtitle">
-                    From task management to gamified achievements, Nexus has everything you need to lead and collaborate effectively.
+                    From task management to gamified achievements, Nexus has everything you need to lead and collaborate
+                    effectively.
                 </p>
             </div>
             <div class="features-grid">
@@ -61,7 +66,8 @@
                     </div>
                     <h3 class="feature-title">Collaborative Projects</h3>
                     <p class="feature-text">
-                        Create, manage, and complete projects together. Define roles and track progress in one intuitive dashboard.
+                        Create, manage, and complete projects together. Define roles and track progress in one intuitive
+                        dashboard.
                     </p>
                 </div>
 
@@ -130,7 +136,7 @@
             <p class="cta-subtitle">
                 Join thousands of teams already collaborating and achieving greatness.
             </p>
-            <a href="#" class="cta-button">
+            <a href="#" class="cta-button" style="text-decoration-line: none;">
                 Sign Up for Nexus
             </a>
         </div>
@@ -144,4 +150,5 @@
     </footer>
 
 </body>
+
 </html>
