--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
         </form>
 
         <p class="switch-page">
-            Don't have an account? <a href="#">Sign up</a>
+            Don't have an account? <a href="signup.html">Sign up</a>
         </p>
     </div>
 
