--- a/signup.html
+++ b/signup.html
@@ -38,7 +38,7 @@
         </form>
 
         <p class="switch-page">
-            Already have an account? <a href="#">Sign in</a>
+            Already have an account? <a href="login.html">Sign in</a>
         </p>
     </div>
 
