--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <header>
         <nav class="navbar">
             <div class="nav-container">
-                <a href="#" class="logo">Nexus</a>
+                <a href="index.html" class="logo">Nexus</a>
                 <div class="nav-links">
-                    <a href="#">Home</a>
-                    <a href="#">Projects</a>
-                    <a href="#">Community</a>
+                    <a href="index.html">Home</a>
+                    <a href="projects.html">Projects</a>
+                    <a href="community.html">Community</a>
                     <div class="nav-btns">
-                        <a href="#" class="btn-secondary">Sign In</a>
-                        <a href="#" class="btn-primary">Get Started</a>
+                        <a href="login.html" class="btn-secondary">Sign In</a>
+                        <a href="projects.html" class="btn-primary">Get Started</a>
                     </div>
 
                 </div>
@@ -41,7 +41,7 @@
             <p class="hero-subtitle">
                 A collaborative platform designed to showcase and reward teamwork and leadership excellence.
             </p>
-            <a href="#" class="hero-cta" style="text-decoration-line: none;">
+            <a href="login.html" class="hero-cta" style="text-decoration-line: none;">
                 Join Now for Free
             </a>
         </div>
@@ -136,7 +136,7 @@
             <p class="cta-subtitle">
                 Join thousands of teams already collaborating and achieving greatness.
             </p>
-            <a href="#" class="cta-button" style="text-decoration-line: none;">
+            <a href="login.html" class="cta-button" style="text-decoration-line: none;">
                 Sign Up for Nexus
             </a>
         </div>
