Fixed the projects page

--- a/projects.html
+++ b/projects.html
@@ -11,19 +11,23 @@
     <link rel="stylesheet" href="projects.css">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="nav-container">
-            <a href="#" class="logo">Nexus</a>
-            <div class="nav-links">
-                <a href="#">Features</a>
-                <a href="#">Community</a>
-                <a href="#">Pricing</a>
-                <a href="#">Contact</a>
-                <a href="#" class="btn-secondary">Sign In</a>
-                <a href="#" class="btn-primary">Get Started</a>
+    <header>
+        <nav class="navbar">
+            <div class="nav-container">
+                <a href="index.html" class="logo">Nexus</a>
+                <div class="nav-links">
+                    <a href="index.html">Home</a>
+                    <a href="projects.html">Projects</a>
+                    <a href="community.html">Community</a>
+                    <div class="nav-btns">
+                        <a href="login.html" class="btn-secondary">Sign In</a>
+                        <a href="projects.html" class="btn-primary">Get Started</a>
+                    </div>
+
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
 
     <div class="container main-content">
         <!-- Header Section -->
@@ -40,26 +44,28 @@
         <!-- Toolbar -->
         <div class="toolbar">
             <div class="toolbar-tabs">
-                <a href="#" class="tab active">All Projects (6)</a>
-                <a href="#" class="tab">My Projects (1)</a>
-                <a href="#" class="tab">Available (2)</a>
-                <a href="#" class="tab">Completed (1)</a>
+                <a href="#" class="tab active" style="text-decoration-line: none;">All Projects (6)</a>
+                <a href="#" class="tab" style="text-decoration-line: none;">My Projects (1)</a>
+                <a href="#" class="tab" style="text-decoration-line: none;">Available (2)</a>
+                <a href="#" class="tab" style="text-decoration-line: none;">Completed (1)</a>
             </div>
-            <div class="toolbar-search">
-                <i class="fas fa-search search-icon"></i>
-                <input type="text" placeholder="Search projects...">
-            </div>
-            <div class="toolbar-filter">
-                <select>
-                    <option>All Categories</option>
-                    <option>Design</option>
-                    <option>Development</option>
-                    <option>Analytics</option>
-                    <option>Marketing</option>
-                    <option>AI/ML</option>
-                    <option>Security</option>
-                </select>
-                <i class="fas fa-chevron-down select-arrow"></i>
+            <div class="toolbar-controls">
+                <div class="toolbar-search">
+                    <i class="fas fa-search search-icon"></i>
+                    <input type="text" placeholder="Search projects...">
+                </div>
+                <div class="toolbar-filter">
+                    <select>
+                        <option>All Categories</option>
+                        <option>Design</option>
+                        <option>Development</option>
+                        <option>Analytics</option>
+                        <option>Marketing</option>
+                        <option>AI/ML</option>
+                        <option>Security</option>
+                    </select>
+                    <i class="fas fa-chevron-down select-arrow"></i>
+                </div>
             </div>
         </div>
 
@@ -88,7 +94,7 @@
                         <span>React</span>
                         <span>Node.js</span>
                     </div>
-                    <a href="#" class="project-details-btn">View Details</a>
+                    <a href="project-details.html" class="project-details-btn">View Details</a>
                 </div>
             </div>
 
@@ -115,7 +121,7 @@
                         <span>Firebase</span>
                         <span>API Integration</span>
                     </div>
-                    <a href="#" class="project-details-btn">View Details</a>
+                    <a href="project-details.html" class="project-details-btn">View Details</a>
                 </div>
             </div>
             
@@ -142,7 +148,7 @@
                         <span>D3.js</span>
                         <span>SQL</span>
                     </div>
-                    <a href="#" class="project-details-btn">View Details</a>
+                    <a href="project-details.html" class="project-details-btn">View Details</a>
                 </div>
             </div>
             
