Added nav link for feedback page in index.html

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <a href="index.html">Home</a>
                     <a href="projects.html">Projects</a>
                     <a href="community.html">Community</a>
+                    <a href="feedback.html">Feedback</a>
                     <div class="nav-btns">
                         <a href="login.html" class="btn-secondary">Sign In</a>
                         <a href="projects.html" class="btn-primary">Get Started</a>
