improved style of project-details

--- a/project-details.html
+++ b/project-details.html
@@ -244,19 +244,27 @@
                     <ul class="milestone-list">
                         <li class="milestone-item">
                             <span>User Testing Phase</span>
-                            <i class="far fa-calendar-alt"></i> Jan 30, 2024
+                            <span class="milestone-data-group">
+                            <i class="far fa-calendar-alt"></i> Jan 30, 2025
+                            </span>
                         </li>
                         <li class="milestone-item">
                             <span>Final Design Review</span>
-                            <i class="far fa-calendar-alt"></i> Feb 5, 2024
+                            <span class="milestone-data-group">
+                            <i class="far fa-calendar-alt"></i> Feb 05, 2025
+                            </span>
                         </li>
                         <li class="milestone-item">
                             <span>Development Complete</span>
-                            <i class="far fa-calendar-alt"></i> Feb 10, 2024
+                            <span class="milestone-data-group">
+                            <i class="far fa-calendar-alt"></i> Feb 10, 2025
+                            </span>
                         </li>
                         <li class="milestone-item">
                             <span>Project Launch</span>
-                            <i class="far fa-calendar-alt"></i> Feb 15, 2024
+                            <span class="milestone-data-group">
+                            <i class="far fa-calendar-alt"></i> Feb 15, 2025
+                            </span>
                         </li>
                     </ul>
                 </div>
