add recent activity and skills section

--- a/user-profile.html
+++ b/user-profile.html
@@ -31,6 +31,19 @@
                 <h2>Jane Doe</h2>
                 <p>Project Leader</p>
                 <p>New York, USA</p>
+
+                <!-- Skills & Expertise Section moved here -->
+                <div class="skills-list-box">
+                    <h3>Skills & Expertise</h3>
+                    <div class="skills-list">
+                        <span class="skill-chip">Project Management</span>
+                        <span class="skill-chip">Team Leadership</span>
+                        <span class="skill-chip">Agile Methodologies</span>
+                        <span class="skill-chip">UI/UX Collaboration</span>
+                        <span class="skill-chip">Communication</span>
+                        <span class="skill-chip">Problem Solving</span>
+                    </div>
+                </div>
             </div>
 
             <!-- Right Column: Points and Badges -->
@@ -66,6 +79,23 @@
                         <p>Top Contributor</p>
                     </div>
                 </div>
+
+                <!-- Recent Activity Section -->
+                <h3>Recent Activity</h3>
+                <ul class="activity-list">
+                    <li>
+                        <span class="activity-dot"></span>
+                        Led the launch of "Nexus 2.0" project <span class="activity-date">2 days ago</span>
+                    </li>
+                    <li>
+                        <span class="activity-dot"></span>
+                        Collaborated with UI team on dashboard redesign <span class="activity-date">5 days ago</span>
+                    </li>
+                    <li>
+                        <span class="activity-dot"></span>
+                        Earned "Top Contributor" badge <span class="activity-date">1 week ago</span>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
