Fixed all navbars

--- a/project-details.html
+++ b/project-details.html
@@ -11,19 +11,23 @@
     <link rel="stylesheet" href="project-details.css">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="nav-container">
-            <a href="#" class="logo">Nexus</a>
-            <div class="nav-links">
-                <a href="#">Features</a>
-                <a href="#">Community</a>
-                <a href="#">Pricing</a>
-                <a href="#">Contact</a>
-                <a href="#" class="btn-secondary">Sign In</a>
-                <a href="#" class="btn-primary">Get Started</a>
+    <header>
+        <nav class="navbar">
+            <div class="nav-container">
+                <a href="index.html" class="logo">Nexus</a>
+                <div class="nav-links">
+                    <a href="index.html">Home</a>
+                    <a href="projects.html">Projects</a>
+                    <a href="community.html">Community</a>
+                    <div class="nav-btns">
+                        <a href="login.html" class="btn-secondary">Sign In</a>
+                        <a href="projects.html" class="btn-primary">Get Started</a>
+                    </div>
+
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
 
     <div class="container main-content">
         <!-- Project Header Section -->
