--- a/feedback.html
+++ b/feedback.html
@@ -8,22 +8,22 @@
 </head>
 <body>
   <header>
-    <nav class="navbar">
+        <nav class="navbar">
             <div class="nav-container">
-                <a href="index.html" class="logo">Nexus</a>
+                <a href="#" class="logo">Nexus</a>
                 <div class="nav-links">
-                    <a href="index.html">Home</a>
-                    <a href="projects.html">Projects</a>
-                    <a href="community.html">Community</a>
+                    <a href="#">Home</a>
+                    <a href="#">Projects</a>
+                    <a href="#">Community</a>
                     <div class="nav-btns">
-                        <a href="login.html" class="btn-secondary">Sign In</a>
-                        <a href="projects.html" class="btn-primary">Get Started</a>
+                        <a href="#" class="btn-secondary">Sign In</a>
+                        <a href="#" class="btn-primary">Get Started</a>
                     </div>
 
                 </div>
             </div>
         </nav>
-  </header>
+    </header>
   <div class="form-container">
     <h2>Share Your Feedback</h2>
     <p>Your thoughts help us improve the experience.</p>
