--- a/user-profile.html
+++ b/user-profile.html
@@ -10,18 +10,23 @@
     <link rel="stylesheet" href="user-profile.css">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="nav-container">
-            <a href="#" class="logo">Nexus</a>
-            <div class="nav-links">
-                <a href="#">Features</a>
-                <a href="#">Community</a>
-                <a href="#">Pricing</a>
-                <a href="#" class="btn-secondary">Sign In</a>
-                <a href="#" class="btn-primary">Get Started</a>
+    <header>
+        <nav class="navbar">
+            <div class="nav-container">
+                <a href="index.html" class="logo">Nexus</a>
+                <div class="nav-links">
+                    <a href="index.html">Home</a>
+                    <a href="projects.html">Projects</a>
+                    <a href="community.html">Community</a>
+                    <div class="nav-btns">
+                        <a href="login.html" class="btn-secondary">Sign In</a>
+                        <a href="projects.html" class="btn-primary">Get Started</a>
+                    </div>
+
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
 
     <div class="container main-content">
         <div class="profile-container">
