--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                     <a href="index.html">Home</a>
                     <a href="projects.html">Projects</a>
                     <a href="community.html">Community</a>
-                    <a href="feedback.html">Feedback</a>
                     <div class="nav-btns">
                         <a href="login.html" class="btn-secondary">Sign In</a>
                         <a href="projects.html" class="btn-primary">Get Started</a>
@@ -35,7 +34,13 @@
 
     <!-- Hero Section -->
     <section class="hero-section">
-        <div class="container text-center">
+        <video class="hero-bg-video" autoplay muted loop playsinline>
+            <source src="Collaborative_Work_Background_Video.mp4" type="video/mp4">
+            <!-- You can add a webm source for better compatibility -->
+            <!-- <source src="your-video.webm" type="video/webm"> -->
+            Your browser does not support the video tag.
+        </video>
+        <div class="container text-center hero-content">
             <h1 class="hero-title">
                 Unlock Your Team's True Potential.
             </h1>
@@ -147,6 +152,9 @@
     <footer class="footer">
         <div class="container text-center">
             <p>&copy; 2024 Nexus. All rights reserved.</p>
+            <p>
+                <a href="feedback.html" class="footer-link">Give Feedback</a>
+            </p>
         </div>
     </footer>
 
