--- a/signup.html
+++ b/signup.html
@@ -11,35 +11,47 @@
 </head>
 <body>
 
-    <div class="container">
-        <div class="text-center">
-            <h1 class="logo">Nexus</h1>
-            <p class="slogan">Collaborate. Lead. Succeed.</p>
+    <div class="login-container">
+        <!-- Signup Form Panel -->
+        <div class="login-form-panel">
+            <div class="text-center">
+                <h2 class="form-title">Create Your Account</h2>
+            </div>
+            
+            <form>
+                <div class="form-group">
+                    <label for="name">Full Name</label>
+                    <input type="text" id="name" name="name" placeholder="John Doe" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email address</label>
+                    <input type="email" id="email" name="email" placeholder="you@example.com" required>
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" placeholder="Create a password" required>
+                </div>
+                <div class="form-group">
+                    <label for="confirm-password">Confirm Password</label>
+                    <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirm your password" required>
+                </div>
+                <button type="submit" class="btn-primary">Sign Up</button>
+            </form>
+
+            <p class="switch-page">
+                Already have an account? <a href="login.html">Sign in</a>
+            </p>
         </div>
         
-        <form>
-            <div class="form-group">
-                <label for="name">Full Name</label>
-                <input type="text" id="name" name="name" placeholder="John Doe" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Email address</label>
-                <input type="email" id="email" name="email" placeholder="you@example.com" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" placeholder="Create a password" required>
-            </div>
-            <div class="form-group">
-                <label for="confirm-password">Confirm Password</label>
-                <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirm your password" required>
-            </div>
-            <button type="submit" class="btn-primary">Sign Up</button>
-        </form>
-
-        <p class="switch-page">
-            Already have an account? <a href="login.html">Sign in</a>
-        </p>
+        <!-- Project Information Panel -->
+        <div class="project-info-panel">
+            <h1 class="project-title">Nexus</h1>
+            <p class="project-slogan">Collaborate. Lead. Succeed.</p>
+            <p class="project-description">
+                A powerful platform to streamline your team's workflow,
+                enhance collaboration, and drive project success.
+            </p>
+        </div>
     </div>
 
 </body>
