--- a/feedback.html
+++ b/feedback.html
@@ -10,14 +10,14 @@
   <header>
         <nav class="navbar">
             <div class="nav-container">
-                <a href="#" class="logo">Nexus</a>
+                <a href="index.html" class="logo">Nexus</a>
                 <div class="nav-links">
-                    <a href="#">Home</a>
-                    <a href="#">Projects</a>
-                    <a href="#">Community</a>
+                    <a href="index.html">Home</a>
+                    <a href="projects.html">Projects</a>
+                    <a href="community.html">Community</a>
                     <div class="nav-btns">
-                        <a href="#" class="btn-secondary">Sign In</a>
-                        <a href="#" class="btn-primary">Get Started</a>
+                        <a href="login.html" class="btn-secondary">Sign In</a>
+                        <a href="projects.html" class="btn-primary">Get Started</a>
                     </div>
 
                 </div>
