fixed navbar style and responsiveness

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                         <a href="login.html" class="btn-secondary">Sign In</a>
                         <a href="projects.html" class="btn-primary">Get Started</a>
                     </div>
-
                 </div>
             </div>
         </nav>
+        <div class="navbar-spacer"></div>
     </header>
 
     <!-- Hero Section -->
