--- a/community.html
+++ b/community.html
@@ -26,6 +26,7 @@
                 </div>
             </div>
         </nav>
+          <div class="navbar-spacer"></div>
     </header>
 
     <div class="container main-content">
