--- a/feedback.html
+++ b/feedback.html
@@ -23,6 +23,7 @@
                 </div>
             </div>
         </nav>
+          <div class="navbar-spacer"></div>
     </header>
   <div class="form-container">
     <h2>Share Your Feedback</h2>
