--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,7 @@
                 </div>
             </div>
         </nav>
+          <div class="navbar-spacer"></div>
     </header>
 
     <div class="container main-content">
