Changed the name of project

--- a/feedback.html
+++ b/feedback.html
@@ -10,7 +10,7 @@
   <header>
         <nav class="navbar">
             <div class="nav-container">
-                <a href="index.html" class="logo">Nexus</a>
+                <a href="index.html" class="logo">HiveMind</a>
                 <div class="nav-links">
                     <a href="index.html">Home</a>
                     <a href="projects.html">Projects</a>
