--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nexus - Login</title>
+    <title>HiveMind - Login</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -40,7 +40,7 @@
         
         <!-- Project Information Panel -->
         <div class="project-info-panel">
-            <h1 class="project-title">Nexus</h1>
+            <h1 class="project-title">HiveMind</h1>
             <p class="project-slogan">Collaborate. Lead. Succeed.</p>
             <p class="project-description">
                 A powerful platform to streamline your team's workflow,
