--- a/user-profile.html
+++ b/user-profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nexus - Profile</title>
+    <title>HiveMind - Profile</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar">
             <div class="nav-container">
-                <a href="index.html" class="logo">Nexus</a>
+                <a href="index.html" class="logo">HiveMind</a>
                 <div class="nav-links">
                     <a href="index.html">Home</a>
                     <a href="projects.html">Projects</a>
@@ -61,7 +61,7 @@
                         <li>
                             <div class="activity-dot"></div>
                             <div class="activity-content">
-                                <p>Led the launch of "Nexus 2.0" project</p>
+                                <p>Led the launch of "HiveMind 2.0" project</p>
                                 <span class="activity-date">2 days ago</span>
                             </div>
                         </li>
