--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nexus - Elevate Your Teamwork</title>
+    <title>HiveMind - Elevate Your Teamwork</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar">
             <div class="nav-container">
-                <a href="index.html" class="logo">Nexus</a>
+                <a href="index.html" class="logo">HiveMind</a>
                 <div class="nav-links">
                     <a href="index.html">Home</a>
                     <a href="projects.html">Projects</a>
@@ -59,7 +59,7 @@
             <div class="section-header">
                 <h2 class="section-title">Features Built for Success</h2>
                 <p class="section-subtitle">
-                    From task management to gamified achievements, Nexus has everything you need to lead and collaborate
+                    From task management to gamified achievements, HiveMind has everything you need to lead and collaborate
                     effectively.
                 </p>
             </div>
@@ -143,7 +143,7 @@
                 Join thousands of teams already collaborating and achieving greatness.
             </p>
             <a href="login.html" class="cta-button" style="text-decoration-line: none;">
-                Sign Up for Nexus
+                Sign Up for HiveMind
             </a>
         </div>
     </section>
@@ -151,7 +151,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container text-center">
-            <p>&copy; 2024 Nexus. All rights reserved.</p>
+            <p>&copy; 2025 HiveMind. All rights reserved.</p>
             <p>
                 <a href="feedback.html" class="footer-link">Give Feedback</a>
             </p>
