--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
                 <h2 class="form-title">Welcome Back</h2>
             </div>
             
-            <form>
+            <form action="user-profile.html">
                 <div class="form-group">
                     <label for="email">Email address</label>
                     <input type="email" id="email" name="email" placeholder="you@example.com" required>
