--- a/signup.html
+++ b/signup.html
@@ -18,7 +18,7 @@
                 <h2 class="form-title">Create Your Account</h2>
             </div>
             
-            <form>
+            <form action="user-profile.html">
                 <div class="form-group">
                     <label for="name">Full Name</label>
                     <input type="text" id="name" name="name" placeholder="John Doe" required>
