Linked about page with evry page of the site

--- a/feedback.html
+++ b/feedback.html
@@ -92,7 +92,7 @@
                     <div class="footer-column">
                         <h4 class="column-title">Company</h4>
                         <ul>
-                            <li><a href="#">About Us</a></li>
+                            <li><a href="about.html">About Us</a></li>
                             <li><a href="#">Careers</a></li>
                             <li><a href="#">Press</a></li>
                             <li><a href="#">Contact</a></li>
