Linked the feedback page in the footer column

--- a/project-details.html
+++ b/project-details.html
@@ -321,7 +321,7 @@
                             <li><a href="#">Careers</a></li>
                             <li><a href="#">Press</a></li>
                             <li><a href="#">Contact</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
+                            <li><a href="feedback.html">Give Feedback</a></li>
                         </ul>
                     </div>
                 </div>
